correct z-index of footer menu

--- a/Monkey/Monkey/Areas/Portal/wwwroot/css/skins/Monkey-skin.css
+++ b/Monkey/Monkey/Areas/Portal/wwwroot/css/skins/Monkey-skin.css
@@ -9868,5 +9868,5 @@ fieldset[disabled] .form-material .form-control {
 }
 
 .site-menubar {
-    z-index: 2000
+    z-index: 1400
 }
